Small spacing fixes for Mobile

--- a/src/scss/Plugins/Community/settingsSearch.scss
+++ b/src/scss/Plugins/Community/settingsSearch.scss
@@ -24,3 +24,8 @@
 		border: unset;
 	}
 }
+
+body.is-mobile.is-phone .search-input-container::before {
+	top: calc((var(--input-height) - var(--search-icon-size))/2);
+	left: var(--size-4-3);
+}
