--- a/src/scss/Plugins/Core/commandPalette.scss
+++ b/src/scss/Plugins/Core/commandPalette.scss
@@ -31,11 +31,12 @@
 		background-color: var(--background-secondary);
 		border-top: var(--window-border);
 	}
+}
 
-	.suggestion-item.mod-complex .suggestion-hotkey {
-		font-weight: 600;
-		border-radius: var(--radius-s);
-	}
+.suggestion-item.mod-complex .suggestion-hotkey {
+	margin-left: var(--size-4-2);
+	font-weight: 600;
+	border-radius: var(--radius-s);
 }
 
 .prompt-input-container {
@@ -62,6 +63,6 @@ input.prompt-input {
 	&:hover,
 	&:focus,
 	&:focus-visible {
-		border: 1px solid var(--window-border-color);;
+		border: 1px solid var(--window-border-color);
 	}
 }
