--- a/src/scss/User Interface/Sidebar/navHeader.scss
+++ b/src/scss/User Interface/Sidebar/navHeader.scss
@@ -75,8 +75,10 @@
 }
 
 // Position Bottom
-:is(.pt-nav-header-left-sidebar-position-bottom .workspace-split.mod-left-split,
-.pt-nav-header-right-sidebar-position-bottom .workspace-split.mod-right-split, .pt-nav-header-left-sidebar-position-bottom .workspace-drawer.mod-left, .pt-nav-header-right-sidebar-position-bottom .workspace-drawer.mod-right) {
+.pt-nav-header-left-sidebar-position-bottom .workspace-drawer.mod-left,
+.pt-nav-header-left-sidebar-position-bottom .workspace-split.mod-left-split,
+.pt-nav-header-right-sidebar-position-bottom .workspace-drawer.mod-right,
+.pt-nav-header-right-sidebar-position-bottom .workspace-split.mod-right-split {
 	.nav-header {
 		position: absolute;
 		bottom: calc(var(--size-2-3) + var(--scroll-bar-size));
@@ -96,16 +98,11 @@
 		padding: var(--size-4-1);
 		pointer-events: auto;
 		background: var(--background-secondary-blur);
+		-webkit-backdrop-filter: blur(var(--blur-intensity));
+		backdrop-filter: blur(var(--blur-intensity));
 		border: 1px solid var(--window-border-color);
 		border-radius: var(--radius-m);
 		box-shadow: var(--shadow-l);
-		-webkit-backdrop-filter: blur(var(--blur-intensity));
-		backdrop-filter: blur(var(--blur-intensity));
-	}
-
-	&.is-mobile .nav-buttons-container,
-	&.is-mobile .workspace-leaf-content[data-type="dangling-links"] .nav-header {
-		padding: var(--size-4-2);
 	}
 
 	.workspace-leaf-content[data-type="dangling-links"] .nav-header {
@@ -122,4 +119,11 @@
 	:is(.nav-files-container, .workspace-leaf-content[data-type="tag"] .tag-container, .workspace-leaf-content[data-type="backlink"] .backlink-pane, .workspace-leaf-content[data-type="starred"] .item-list, .workspace-leaf-content[data-type="dictionary-view"] .contents, .workspace-leaf-content[data-type="dangling-links"] .view-content .container, .workspace-leaf-content[data-type="bookmarks"] .view-content > div, .workspace-leaf-content[data-type=all-properties] .view-content, .workspace-leaf-content[data-type=properties] .view-content) {
 		padding-bottom: calc(38px + 2 * var(--scroll-bar-size));
 	}
+}
+
+.pt-nav-header-left-sidebar-position-bottom.is-mobile .workspace-drawer.mod-left .nav-buttons-container,
+.pt-nav-header-right-sidebar-position-bottom.is-mobile .workspace-drawer.mod-right .nav-buttons-container,
+.pt-nav-header-left-sidebar-position-bottom.is-mobile .workspace-drawer.mod-left .workspace-leaf-content[data-type="dangling-links"] .nav-header,
+.pt-nav-header-right-sidebar-position-bottom.is-mobile .workspace-drawer.mod-right .workspace-leaf-content[data-type="dangling-links"] .nav-header {
+	padding: var(--size-4-2);
 }
