--- a/src/scss/User Interface/mobileAdjustments.scss
+++ b/src/scss/User Interface/mobileAdjustments.scss
@@ -162,7 +162,7 @@ body.is-mobile {
 
 		// The default offset does not account for the margin
 		.search-input-container:before {
-			top: calc((var(--input-height) - var(--search-icon-size) + var(--size-4-1)) / 2);
+			top: calc((var(--input-height) - var(--search-icon-size) + var(--size-4-2)) / 2);
 		}
 	}
 
